# petstore-hexarch-rust-main

./: Cargo.toml  Dockerfile  GEMINI.md  docker-compose.yml
.gemini/: settings.json  settings.json.orig
.github/workflows/: ci.yaml
migrations/: 1_petstore_init_up.sql
src/lib/: domain.rs  outbound.rs
src/lib/domain/petstore/: models.rs  ports.rs  service.rs
src/lib/domain/petstore/models/: category.rs  pet.rs  tag.rs  value_objects.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs
src/lib/inbound/http/handlers/: add_pet.rs  find_pet_by_id.rs
src/lib/outbound/: connect.rs  params.rs  repository.rs
tests/: integration_test.rs
