[package]
name = "petstore_hexarch_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "petstore_hexarch_rust"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
derive_more = "0.99.17"
lombok = "0.4.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"

[dev-dependencies]
testcontainers = { version = "0.24.0" }

